# Avl_tree_project-world_cup

./: CMakeLists.txt  DS_wet1_Winter2022-23.docx  EmptyTree.cpp  EmptyTree.h  LinkedList.h  LinkedListNode.h  Node.h  PlayerData.cpp  PlayerData.h  PlayerNode.cpp  PlayerNode.h  PlayersAVLTree.cpp  RankAVLTree.cpp  RankAVLTree.h  RankPlayerData.cpp  RankPlayerData.h  RankPlayerNode.cpp  RankPlayerNode.h  TeamData.cpp  TeamData.h  TeamNode.cpp  TeamNode.h  TeamsAVLTree.cpp  TeamsAVLTree.h  avlTree.cpp  avlTree.h  catch.hpp  main.cpp  main23a1.cpp  mainTests.cpp  testLinkedList.cpp  testWC.cpp  validTeams.cpp  validTeams.h  worldcup23a1.cpp  worldcup23a1.h  תרגיל רטוב 1 - רעיונות.docx
BinaryTreeAVL/: EmptyTree.h  Node.cpp  Node.h  avlTree.cpp  avlTree.h
LinkedList/: LinkedList.h  LinkedListNode.h
PlayersTree/: PlayerNode.h  PlayersAVLTree.h
TeamsTree/: TeamNode.cpp  TeamNode.h
