cmake_minimum_required(VERSION 3.20)
project(Data_Structures_ex1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structures_ex1
        Node.cpp
        Node.h
        avlTree.cpp
        avlTree.h
        EmptyTree.cpp
        EmptyTree.h
        PlayerNode.cpp
        PlayerNode.h
        TeamNode.cpp
        TeamNode.h
        LinkedList.cpp
        LinkedList.h
        LinkedListNode.cpp
        LinkedListNode.h
        RankPlayerData.cpp
        RankPlayerData.h
        main.cpp
        worldcup23a1.cpp
        worldcup23a1.h)