cmake_minimum_required(VERSION 3.20)
project(DS_WET1)

set(CMAKE_CXX_STANDARD 14)

add_executable(DS_WET1
        Node.cpp
        Node.h
        avlTree.cpp
        avlTree.h
        EmptyTree.cpp
        EmptyTree.h
        LinkedList.cpp
        LinkedList.h
        LinkedListNode.cpp
        LinkedListNode.h
        RankPlayerData.cpp
        RankPlayerData.h
        main.cpp
        worldcup23a1.cpp
        worldcup23a1.h
        testWC.cpp
        main23a1.cpp
        test.in)